--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>doodletoy</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="fable.ico" />
+  <link rel="shortcut icon" href="doodletoy.png" />
   <!--
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   -->
