Help docs, responsive

--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,10 @@
 
   <script src="https://kit.fontawesome.com/a1cdbc2d94.js" crossorigin="anonymous"></script>
 
+  <link rel="stylesheet" href="app.css" />
+
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-  <style>
-      * {
-        font-family: 'Titillium Web', sans-serif;
-      }
-  </style>
+
 </head>
 <body>
     <div id="sutil-app"></div>
