--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>doodletoy</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="doodletoy.png" />
+  <link rel="shortcut icon" href="star.png" />
   <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
